Chang index.html file

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                               <button onclick="nextVideos()"><i class="fas fa-step-forward"></i></button>
                         </div>
                   </div>
-
+                  <hr id="line">
                   <div class="card"></div>     
             </div>
             
